[package]
name = "naive_p2p"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.10"
tokio = { version = "1.12", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
